tests/ui/print_needs_one.stderr
Error [E0103]: `print` needs exactly one thing to print
  --> tests/ui/print_needs_one.jet:2:5
    |
  2 |     print();
    |     ^^^^^
 Why: printing nothing isn't meaningful
 Fix: e.g. print("hello")
